<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_user_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_heading"
        android:textAlignment="center"
        android:textSize="36sp"
        android:paddingBottom="10dp"
        android:paddingTop="50dp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="450dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/confirm_password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/first_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/age_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grade"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/grade_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/greek_org"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/greek_org"
                        android:textAlignment="textEnd"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/greek_org_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>
            </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/register_button"
        android:textColor="@color/backgroundColor"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>